[package]
name = "sc-transaction-pool"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate transaction pool implementation."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
derive_more = "0.99.2"
futures = { version = "0.3.1", features = ["compat"] }
futures-diagnose = "1.0"
intervalier = "0.4.0"
log = "0.4.8"
parity-util-mem = { version = "0.7.0", default-features = false, features = ["primitive-types"] }
parking_lot = "0.10.0"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.8.0"}
sc-client-api = { version = "2.0.0"}
sc-transaction-graph = { version = "2.0.0"}
sp-api = { version = "2.0.0"}
sp-core = { version = "2.0.0"}
sp-runtime = { version = "2.0.0"}
sp-tracing = { version = "2.0.0"}
sp-transaction-pool = { version = "2.0.0"}
sp-blockchain = { version = "2.0.0"}
sp-utils = { version = "2.0.0"}
wasm-timer = "0.2"

[dev-dependencies]
assert_matches = "1.3.0"
hex = "0.4"
sp-keyring = { version = "2.0.0"}
sp-consensus = { version = "0.8.0"}
#substrate-test-runtime-transaction-pool = { version = "2.0.0"}
#substrate-test-runtime-client = { version = "2.0.0"}
sc-block-builder = { version = "0.8.0", path = "../block-builder" }

