[package]
authors = ["Mangata Team"]
edition = "2018"
license = "Unlicense"
name = 'pallet-bootstrap'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { version = "0.4.20", default-features = false }
serde = { version = "1.0.126", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-system = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-executive = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
frame-try-runtime = { git = "https://github.com/mangata-finance/substrate", default-features = false, optional = true , branch = "mangata-dev" }
orml-tokens = { default-features = false, version="0.4.1-dev" , git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }
mangata-types = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
sp-core = { default-features = false, version = '7.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-std = { default-features = false, version = '5.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
sp-io = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
sp-arithmetic= { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
frame-benchmarking = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-vesting-mangata = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
pallet-issuance = { path = "../issuance", default-features = false}
mangata-support = { default-features = false , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }

[dev-dependencies]
test-case = "2.0.2"
sp-core = { default-features = false, version = '7.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-io = { default-features = false, version = '7.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
orml-traits = { default-features = false, version="0.4.1-dev" , git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }
pallet-xyk = { path = "../xyk" }
pallet-proof-of-stake = { path = "../proof-of-stake" }
pallet-issuance = { path = "../issuance", default-features = false}
mockall = "0.11.0"
serial_test = "0.6.0"
mangata-support = { default-features = false , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
lazy_static = "1.1.1"


[features]
default = ['std']
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	'serde',
	'codec/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-io/std',
	'frame-support/std',
	'frame-system/std',
	'orml-tokens/std',
	"frame-benchmarking/std",
	'pallet-vesting-mangata/std',
	'pallet-issuance/std',
	"mangata-support/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"orml-tokens/try-runtime",
	"pallet-vesting-mangata/try-runtime",
	"sp-runtime/try-runtime"
]
