[package]
authors = ["Mangata Team"]
edition = "2018"
license = "Unlicense"
name = "pallet-bootstrap"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.0", features = ["derive"], default-features = false }
serde = { version = "1.0.188", optional = true }

frame-benchmarking = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-executive = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-try-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", optional = true, branch = "develop", default-features = false }
mangata-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
mangata-types = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
pallet-vesting-mangata = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-arithmetic = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-std = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }

orml-tokens = { git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "develop", default-features = false }

[dev-dependencies]
lazy_static = "1.1.1"
mockall = "0.11.0"
serial_test = "0.6.0"
test-case = "2.0.2"

pallet-issuance = { path = "../issuance", default-features = false }
pallet-proof-of-stake = { path = "../proof-of-stake" }
pallet-xyk = { path = "../xyk" }

mangata-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }

orml-traits = { git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "develop", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"mangata-support/std",
	"orml-tokens/std",
	"pallet-vesting-mangata/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"orml-tokens/try-runtime",
	"pallet-vesting-mangata/try-runtime",
	"sp-runtime/try-runtime",
]
