[package]
authors = ["Mangata Team"]
edition = "2018"
license = "Unlicense"
name = "pallet-bootstrap"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, features = ["derive"], default-features = false }
serde = { workspace = true, optional = true }

frame-benchmarking = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-try-runtime = { workspace = true, optional = true, default-features = false }
mangata-support = { workspace = true, default-features = false }
mangata-types = { workspace = true, default-features = false }
pallet-vesting-mangata = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

orml-tokens = { workspace = true, default-features = false }

[dev-dependencies]
lazy_static.workspace = true
mockall.workspace = true
serial_test.workspace = true
test-case.workspace = true

pallet-issuance = { path = "../issuance", default-features = false }
pallet-proof-of-stake = { path = "../proof-of-stake" }
pallet-xyk = { path = "../xyk" }

mangata-support = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }

orml-traits = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"mangata-support/std",
	"orml-tokens/std",
	"pallet-vesting-mangata/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"orml-tokens/try-runtime",
	"pallet-vesting-mangata/try-runtime",
	"sp-runtime/try-runtime",
]
