[package]
name = "pallet-bridge"
description = "Artemis Bridge Pallet"
version = "0.1.1"
edition = "2018"
authors = ["Snowmangata-dev <contact@snowmangata-dev.com>"]
repository = "https://github.com/Snowmangata-dev/polkadot-ethereum"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.serde]
package = "serde"
optional = true
version = "1.0.101"
features = ["derive"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies.frame-support]
default-features = false
version = "2.0.0"

[dependencies.frame-system]
default-features = false
version = "2.0.0"

[dependencies.sp-core]
default-features = false
version = "2.0.0"

[dependencies.sp-std]
default-features = false
version = "2.0.0"

[dependencies.sp-io]
default-features = false
version = "2.0.0"

[dependencies.sp-runtime]
default-features = false
version = "2.0.0"

[dependencies.artemis-core]
default-features = false
version = "0.1.1"


[dependencies]
hex-literal = { version = "0.3.1", default-features = true }
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }

[dev-dependencies]
pallet-verifier = "0.1.1"
artemis-erc20-app = "0.1.1"
artemis-eth-app = "0.1.1"
artemis-asset = "0.1.1"
orml-tokens = "0.3.1"

mangata-primitives = { path = '../../primitives/mangata', default-features = false, version = '0.1.0' }


[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "artemis-core/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]
