[package]
name = "artemis-asset"
version = "0.1.1"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies.frame-support]
default-features = false
version = "2.0.0"

[dependencies.frame-system]
default-features = false
version = "2.0.0"

[dependencies.sp-core]
default-features = false
version = "2.0.0"

[dependencies.sp-std]
default-features = false
version = "2.0.0"

[dependencies.sp-io]
default-features = false
version = "2.0.0"

[dependencies.sp-runtime]
default-features = false
version = "2.0.0"

[dev-dependencies.sp-keyring]
default-features = false
version = "2.0.0"

[dependencies.serde]
package = "serde"
optional = true
version = "1.0.101"
features = ["derive"]

[dependencies.artemis-core]
default-features = false
path = "../../primitives/core"

[dependencies.orml-tokens]
path = '../tokens'
default-features = false
version = '0.3.1'

[dependencies.orml-traits]
version = "0.3.1"
default-features = false

[features]
default = ["std"]
std = [
    "hex/std",
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "artemis-core/std",
    'orml-traits/std',
]
