[package]
authors = ['Mangata team']
edition = '2018'
name = 'pallet-encrypted-transactions'
version = '0.2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { version = "0.4.14", default-features = false }
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
hex-literal = { version = "0.3.3", default-features = false }
serde = { version = "1.0.126", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
pallet-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }


sp-application-crypto = { version = "6.0.0-dev", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-support = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-system = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
sp-core = { default-features = false, version = '6.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-io = { default-features = false, version = '6.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-std = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
mangata-types = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
sp-arithmetic= { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
orml-tokens = { default-features = false, version="0.4.1-dev" , git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false}
merlin = { version = "2.0", default-features = false }


[dev-dependencies]
orml-traits = { version="0.4.1-dev" , git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }
pallet-session = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
serial_test = { version = "0.6.0", default-features = false }
sp-keystore = { version = "0.12.0", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }


[features]
default = ['std']
std = [
    'hex/std',
	'serde',
    'codec/std',
    'sp-std/std',
	'sp-core/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-session/std',
    'sp-runtime/std',
    'sp-application-crypto/std',
    'sp-std/std',
    'mangata-types/std',
    'sp-arithmetic/std',
    'orml-tokens/std',
    'merlin/std',
    'schnorrkel/std',
]
